# hackprinceton2026

./: .env.example  .gitignore  .mcp.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: config.py  db.py  dedalus_swarm.py  gpt.py  k2.py  knot.py  main.py  preset_library.py  pyproject.toml  swarm.py  swarm_events.py  twin_minter.py
apps/backend/dedalus-knot-tools/: README.md  package.json
apps/backend/dedalus-knot-tools/src/: distributionTool.ts  exampleRunner.ts  index.ts  normalize.ts  statsTool.ts  types.ts
apps/backend/migrations/: 0001_init.sql  0002_presets_and_vector.sql  0003_preset_reactions.sql  0004_generated_presets.sql
apps/backend/routes/: dashboard.py  preset.py  sessions.py  swarm.py  twins.py  webhooks.py
apps/backend/scripts/: run_full_swarm.py  seed_knot_mock_twins.py  seed_mock_twins.py
apps/dashboard/: package-lock.json  package.json
apps/dashboard/app/: page.tsx
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/shopify-app/: .txt  package-lock.json  package.json  shopify.app.knotmyshop.toml  shopify.web.toml  vite.config.ts
apps/shopify-app/app/: knot.server.ts
apps/shopify-app/app/routes/: api.knot.accounts.ts  api.knot.discount.ts  api.knot.session.ts  app._index.tsx  app.knot-dashboard.tsx  app.tsx  apps.knot.api.knot.accounts.ts  apps.knot.api.knot.discount.ts  apps.knot.api.knot.session.ts
apps/shopify-app/extensions/amazon-discount-banner/: shopify.extension.toml
apps/shopify-app/prisma/: schema.prisma
containers/swarm-runner/: Dockerfile  pyproject.toml  runner.py
(+8 files in other folders)
