[project]
name = "twinstore-backend"
version = "0.0.1"
description = "TwinStore backend — twin minting, swarm dispatch, Shopify write-back"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "supabase>=2.8.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
